fix: ajuste novedades contractuales
